--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -20,7 +20,7 @@
   <div class="row justify-content-center">
     <div class="col-lg-5 col-md-7">
       <div class="card bg-secondary shadow border-0">
-        <div class="card-header bg-transparent pb-5">
+        <!-- <div class="card-header bg-transparent pb-5">
           <div class="text-muted text-center mt-2 mb-3"><small>Sign in with</small></div>
           <div class="btn-wrapper text-center">
             <a href="javascript:void(0)" class="btn btn-neutral btn-icon">
@@ -32,18 +32,53 @@
               <span class="btn-inner--text">Google</span>
             </a>
           </div>
-        </div>
+        </div> -->
         <div class="card-body px-lg-5 py-lg-5">
           <div class="text-center text-muted mb-4">
-            <small>Or sign in with credentials</small>
+            <small>Sign in with credentials</small>
           </div>
+
+          <!-- <div class="row justify-content-center my-5">
+            <div class="col-4">
+              <div class="card">
+                <div class="card-body">
+                  <div class="row">
+                    <div class="col mb-2">
+                      <label for="email" class="form-label">Email:</label>
+                      <input type="email" id="email" name="email" #email="ngModel" [(ngModel)]="user.email" class="form-control form-control-sm">
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col mb-2">
+                      <label for="password" class="form-label">Password:</label>
+                      <div class="input-group input-group-sm">
+                        <input [type]="user.showPassword ? 'text' : 'password'" id="password" name="password" #password="ngModel" [(ngModel)]="user.password" class="form-control form-control-sm">
+                        <button type="button" class="btn btn-outline-secondary" (click)="user.showPassword = !user.showPassword">
+                          <i class="bi" [ngClass]="{'bi-eye-fill': !user.showPassword, 'bi-eye-slash-fill': user.showPassword}"></i>
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col d-grid">
+                      <button type="button" (click)="signIn()" class="btn btn-sm btn-success" [disabled]="loading">
+                        <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true" *ngIf="loading"></span>
+                        Sign in
+                      </button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div> -->
+
           <form role="form">
             <div class="form-group mb-3">
               <div class="input-group input-group-alternative">
                 <div class="input-group-prepend">
                   <span class="input-group-text"><i class="ni ni-email-83"></i></span>
                 </div>
-                <input class="form-control" placeholder="Email" type="email">
+                <input class="form-control" placeholder="Email" type="email" #email="ngModel" [(ngModel)]="user.email">
               </div>
             </div>
             <div class="form-group">
@@ -51,7 +86,7 @@
                 <div class="input-group-prepend">
                   <span class="input-group-text"><i class="ni ni-lock-circle-open"></i></span>
                 </div>
-                <input class="form-control" placeholder="Password" type="password">
+                <input class="form-control" placeholder="Password" type="password" #password="ngModel" [(ngModel)]="user.password">
               </div>
             </div>
             <div class="custom-control custom-control-alternative custom-checkbox">
@@ -61,9 +96,10 @@
               </label>
             </div>
             <div class="text-center">
-              <button type="button" class="btn btn-primary my-4">Sign in</button>
+              <button type="button" class="btn btn-primary my-4" (click)="signIn()">Sign in</button>
             </div>
           </form>
+
         </div>
       </div>
       <div class="row mt-3">
