--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,6 +1,13 @@
 <div class="header bg-gradient-danger pb-8 pt-5 pt-md-8">
   <div class="container-fluid">
     <div class="header-body">
+
+      <div class="row">
+        <div class="text-center">
+          <button type="button" class="btn btn-primary my-4" (click)="callEndpoint();">Call Endpoint</button>
+        </div>
+      </div>
+
       <!-- Card stats -->
       <div class="row">
         <div class="col-xl-3 col-lg-6">
