--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -4,7 +4,7 @@
       <div class="row justify-content-center">
         <div class="col-lg-5 col-md-6">
           <h1 class="text-white">Welcome!</h1>
-          <p class="text-lead text-light">Use these awesome forms to login or create new account in your project for free.</p>
+          <p class="text-lead text-white">Use these awesome forms to login or create new account in your project for free.</p>
         </div>
       </div>
     </div>
@@ -107,7 +107,7 @@
           <a href="javascript:void(0)" class="text-light"><small>Forgot password?</small></a>
         </div>
         <div class="col-6 text-right">
-          <a routerLinkActive="active" class="text-light"><small>Create new account</small></a>
+          <a routerLinkActive="active" [routerLink]="['/register']" class="text-light"><small>Create new account</small></a>
         </div>
       </div>
     </div>
