Fix error message spacing

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -96,7 +96,7 @@
               <button class="btn btn-primary mr-1" [disabled]="signingIn">Sign In</button>
             </div>
 
-            <div *ngIf="failed" class="failed-form">
+            <div *ngIf="failed" class="failed-form mt-5">
               Incorrect username or password.
             </div>
           </form>
@@ -112,6 +112,5 @@
         </div>
       </div>
     </div>
-
   </div>
 </div>
