--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -41,21 +41,7 @@
             <small>Sign in with credentials</small>
           </div>
 
-          <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
-
-            <!-- <div class="form-group mb-3">
-              <div class="input-group input-group-alternative">
-                <div class="input-group-prepend">
-                  <span class="input-group-text"><i class="ni ni-single-02"></i></span>
-                </div>
-                <input type="text" formControlName="name" placeholder="Name" class="form-control"
-                  [ngClass]="{ 'is-invalid': submitted && f.name.errors }" autocomplete="name" />
-              </div>
-              <div *ngIf="submitted && f.name.errors" class="custom-invalid-feedback">
-                <div *ngIf="f.name.errors.required">Name is required</div>
-              </div>
-            </div> -->
-
+          <form [formGroup]="signInForm" (ngSubmit)="onSubmit()">
             <div class="form-group mb-3">
               <div class="input-group input-group-alternative">
                 <div class="input-group-prepend">
