--- a/src/app/layouts/auth-layout/auth-layout.component.html
+++ b/src/app/layouts/auth-layout/auth-layout.component.html
@@ -59,7 +59,7 @@
 </div>
 <footer class="py-5">
   <div class="container">
-    <div class="row align-items-center justify-content-xl-between">
+    <!-- <div class="row align-items-center justify-content-xl-between">
       <div class="col-xl-6">
         <div class="copyright text-center text-xl-left text-muted">
           &copy; {{ test | date: "yyyy" }} <a href="https://www.creative-tim.com?ref=ada-footer-auth-layout" class="font-weight-bold ml-1" target="_blank">Creative Tim</a>
@@ -81,6 +81,6 @@
           </li>
         </ul>
       </div>
-    </div>
+    </div> -->
   </div>
 </footer>
