--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -91,7 +91,7 @@
       </div>
       <div class="row mt-3">
         <div class="col-6">
-          <a href="javascript:void(0)" class="text-light"><small>Forgot password?</small></a>
+          <a routerLinkActive="active" [routerLink]="['/forgot-password']" class="text-light"><small>Forgot password?</small></a>
         </div>
         <div class="col-6 text-right">
           <a routerLinkActive="active" [routerLink]="['/register']" class="text-light"><small>Create new account</small></a>
