--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -4,6 +4,7 @@
 
       <div class="row">
         <div class="text-center">
+          <pre style="width: 500px; text-overflow: clip;">{{ userService.activeUser | json }}</pre>
           <button type="button" class="btn btn-primary my-4" (click)="callEndpoint();">Call Endpoint</button>
         </div>
       </div>
