--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -2,10 +2,9 @@
   <div class="container-fluid">
     <div class="header-body">
 
-      <div class="row">
-        <div class="text-center">
-          <button type="button" class="btn btn-primary my-4" (click)="callEndpoint();">Call Endpoint</button>
-        </div>
+      
+      <div>
+        <button type="button" class="btn btn-primary my-4" (click)="callEndpoint();">Call Endpoint</button>
       </div>
 
       <!-- Card stats -->
