--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -162,7 +162,7 @@
               <h3 class="mb-0">Page visits</h3>
             </div>
             <div class="col text-right">
-              <a href="#!" class="btn btn-sm btn-primary">See all</a>
+              <a href="javascript:void(0)" class="btn btn-sm btn-primary">See all</a>
             </div>
           </div>
         </div>
@@ -261,7 +261,7 @@
               <h3 class="mb-0">Social traffic</h3>
             </div>
             <div class="col text-right">
-              <a href="#!" class="btn btn-sm btn-primary">See all</a>
+              <a href="javascript:void(0)" class="btn btn-sm btn-primary">See all</a>
             </div>
           </div>
         </div>
