--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -119,6 +119,11 @@
 					</form>
 				</div>
 			</div>
+			<div class="row mt-3">
+				<div class="col-6">
+				  <a routerLinkActive="active" [routerLink]="['/login']" class="text-light"><small>Log In</small></a>
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
