--- a/src/app/pages/user-profile/user-profile.component.html
+++ b/src/app/pages/user-profile/user-profile.component.html
@@ -78,7 +78,7 @@
               <h3 class="mb-0">My account</h3>
             </div>
             <div class="col-4 text-right">
-              <a href="#!" class="btn btn-sm btn-primary">Settings</a>
+              <a href="javascript:void(0)" class="btn btn-sm btn-primary">Settings</a>
             </div>
           </div>
         </div>
