--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -7,6 +7,10 @@
         <button type="button" class="btn btn-primary my-4" (click)="callEndpoint();">Call Endpoint</button>
       </div>
 
+      <div class="mb-4">
+        <calendar-day></calendar-day>
+      </div>
+
       <!-- Card stats -->
       <div class="row">
         <div class="col-xl-3 col-lg-6">
