--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -2,17 +2,12 @@
   <div class="container-fluid">
     <div class="header-body">
 
-      
       <div>
         <button type="button" class="btn btn-primary my-4" (click)="callEndpoint();">Call Endpoint</button>
       </div>
 
-      <div class="mb-4">
-        <calendar-day></calendar-day>
-      </div>
-
       <!-- Card stats -->
-      <div class="row">
+      <!-- <div class="row">
         <div class="col-xl-3 col-lg-6">
           <div class="card card-stats mb-4 mb-xl-0">
             <div class="card-body">
@@ -97,11 +92,17 @@
             </div>
           </div>
         </div>
+      </div> -->
+
+      <div class="mb-4">
+        <calendar-day></calendar-day>
       </div>
+
     </div>
   </div>
 </div>
 <div class="container-fluid mt--7">
+
   <div class="row">
     <div class="col-xl-8 mb-5 mb-xl-0">
       <div class="card bg-gradient-default shadow">
