--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -6,8 +6,12 @@
         <button type="button" class="btn btn-primary my-4" (click)="callEndpoint();">Call Endpoint</button>
       </div>
 
+      <div class="mb-4">
+        <calendar-day></calendar-day>
+      </div>
+
       <!-- Card stats -->
-      <!-- <div class="row">
+      <div class="row">
         <div class="col-xl-3 col-lg-6">
           <div class="card card-stats mb-4 mb-xl-0">
             <div class="card-body">
@@ -92,10 +96,6 @@
             </div>
           </div>
         </div>
-      </div> -->
-
-      <div class="mb-4">
-        <calendar-day></calendar-day>
       </div>
 
     </div>
